--- a/archives.html
+++ b/archives.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>DragonSprint.com</title>
-        <link rel="stylesheet" href="http://dragonsprint.com/theme/css/main.css" />
-        <link href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DragonSprint.com Atom Feed" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DragonSprint.com Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,9 +13,9 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://dragonsprint.com/">DragonSprint.com </a></h1>
+                <h1><a href="/">DragonSprint.com </a></h1>
                 <nav><ul>
-                    <li><a href="http://dragonsprint.com/category/yeah.html">yeah</a></li>
+                    <li><a href="/category/yeah.html">yeah</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -23,7 +23,7 @@
 
 <dl>
     <dt>Sun 03 October 2010</dt>
-    <dd><a href="http://dragonsprint.com/my-super-post.html">My super title</a></dd>
+    <dd><a href="/my-super-post.html">My super title</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -39,7 +39,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
