--- a/authors.html
+++ b/authors.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>DragonSprint.com - Authors</title>
-        <link rel="stylesheet" href="http://dragonsprint.com/theme/css/main.css" />
-        <link href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DragonSprint.com Atom Feed" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DragonSprint.com Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,17 +13,17 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://dragonsprint.com/">DragonSprint.com </a></h1>
+                <h1><a href="/">DragonSprint.com </a></h1>
                 <nav><ul>
-                    <li><a href="http://dragonsprint.com/category/yeah.html">yeah</a></li>
+                    <li><a href="/category/yeah.html">yeah</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on DragonSprint.com</h1>
     <ul>
-        <li><a href="http://dragonsprint.com/author/alexis-metaireau.html">Alexis Metaireau</a> (1)</li>
-        <li><a href="http://dragonsprint.com/author/conan-doyle.html">Conan Doyle</a> (1)</li>
+        <li><a href="/author/alexis-metaireau.html">Alexis Metaireau</a> (1)</li>
+        <li><a href="/author/conan-doyle.html">Conan Doyle</a> (1)</li>
     </ul>
 </section>
 
@@ -40,7 +40,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
