Generate Pelican site

--- a/my-super-post.html
+++ b/my-super-post.html
@@ -21,8 +21,8 @@
         <link rel="stylesheet" href="http://dragonsprint.com/theme/css/pygments.css" />
         <script src="http://dragonsprint.com/theme/js/modernizr.js"></script>
 
-        <link href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DragonSprint.com Full Atom Feed" />
-        <link href="http://dragonsprint.com/feeds/yeah.atom.xml" type="application/atom+xml" rel="alternate" title="DragonSprint.com Categories Atom Feed" />
+        <link href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Full Atom Feed" />
+        <link href="http://dragonsprint.com/feeds/yeah.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Categories Atom Feed" />
 
     </head>
       
@@ -47,7 +47,7 @@
 
                 <div class="row title-bar">
                     <div class="small-12 columns">
-                        <h1><a href="http://dragonsprint.com">DragonSprint.com</a></h1><h2> <small></small></h2>
+                        <h1><a href="http://dragonsprint.com">A full week of sprinting on Pyramid</a></h1><h2> <small>5 to 9 December 2016, set in the beautiful Ljubljana, Slovenia</small></h2>
                         <hr>
                     </div>
                 </div>
