Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -112,9 +112,10 @@
                             </div>
                             <div class="small-12 columns">
                                 <ul class="inline-center social-list">
-                                    <li><a href="mailto:info@dragonsprint.com"><i class="fa fa-email"></i>&nbsp; Email</a></li>
-                                    <li><a href="#"><i class="fa fa-github"></i>&nbsp; Github</a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i>&nbsp; Twitter</a></li>
+                                    <li><a href="mailto:mailto:info@dragonsprint.com"><i class="fa fa-envelope"></i>&nbsp; Email</a></li>
+                                    <li><a href="https://github.com/pylons/pyramid/issues?q=is%3Aissue+is%3Aopen+label%3Asprintable"><i class="fa fa-github"></i>&nbsp; Github</a></li>
+                                    <li><a href="https://twitter.com/DragonSprintCom"><i class="fa fa-twitter"></i>&nbsp; Twitter</a></li>
+                                    <li><a href="https://www.meetup.com/Ljubljana-Python-Group/"><i class="fa fa-meetup"></i>&nbsp; Meetup</a></li>
                                 </ul>
                             </div>
                         </div>
