Generate Pelican site

--- a/my-super-post.html
+++ b/my-super-post.html
@@ -123,7 +123,7 @@
                         <h5 class='text-center'>About</h5>
                         <div class="about-me">
                             <div class="small-12 columns text-justify">
-                                DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are Pyramid 2.0 and Pyramid for Newcomers. <br /><br />The sprint is <b>free</b> to attend for everyone! Contact us if you need help with covering your travel expenses.
+                                DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are Pyramid 2.0 and Pyramid for Newcomers. <br /><br />The sprint is <b>free</b> to attend for everyone! <a href="mailto:info@dragonsprint.com">Contact us</a> if you need help with covering your travel expenses.
                             </div>
                             <div class="small-12 columns">
                                 <ul class="inline-center social-list">
