Generate Pelican site

--- a/my-super-post.html
+++ b/my-super-post.html
@@ -38,6 +38,7 @@
                     </ul>
                     <section class="top-bar-section">
                         <ul class="left">
+                            <li><a href="http://dragonsprint.com/pages/venue.html">Poligon - The Sprint Venue</a></li>
                         </ul>
                         <ul class="right">
                             <li class="active"><a href="http://dragonsprint.com/category/yeah.html">yeah</a></li>
