--- a/categories.html
+++ b/categories.html
@@ -36,7 +36,7 @@
                     </ul>
                     <section class="top-bar-section">
                         <ul class="left">
-                            <li><a href="http://dragonsprint.com/pages/venue.html">Poligon - The Sprint Venue</a></li>
+                            <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
                             <li><a href="http://dragonsprint.com/category/yeah.html">yeah</a></li>
@@ -56,7 +56,7 @@
     <div class="small-12 columns article">
         <h2><a href="http://dragonsprint.com/category/yeah.html">yeah</a></h2>
               <section class="summary">
-    <h3><a href="http://dragonsprint.com/my-super-post.html" rel="bookmark" title="Permalink to My super title">My super title</a></h3>
+    <h3><a href="http://dragonsprint.com/my-super-post.html" rel="bookmark" title="Permalink to Foo">Foo</a></h3>
     <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
