--- a/my-super-post.html
+++ b/my-super-post.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Ljubljana Pyramid Hackers" />
-        <title>My super title</title>
+        <title>Foo</title>
 
 <meta name="description" content="&lt;p class=&#34;first last&#34;&gt;Short version for index and feeds&lt;/p&gt;
 " />
@@ -38,7 +38,7 @@
                     </ul>
                     <section class="top-bar-section">
                         <ul class="left">
-                            <li><a href="http://dragonsprint.com/pages/venue.html">Poligon - The Sprint Venue</a></li>
+                            <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
                             <li class="active"><a href="http://dragonsprint.com/category/yeah.html">yeah</a></li>
@@ -56,7 +56,7 @@
                 <div id="contents">
 <div class="row">
     <div class="small-12 columns article">
-        <h2>My super title</h2>
+        <h2>Foo</h2>
         <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
