--- a/tags.html
+++ b/tags.html
@@ -36,7 +36,7 @@
                     </ul>
                     <section class="top-bar-section">
                         <ul class="left">
-                            <li><a href="http://dragonsprint.com/pages/venue.html">Poligon - The Sprint Venue</a></li>
+                            <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
                             <li><a href="http://dragonsprint.com/category/yeah.html">yeah</a></li>
