Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="row">
     <div class="small-12 medium-12 columns">
         <section class="summary">
-    <h3><a href="http://dragonsprint.com/my-super-post.html" rel="bookmark" title="Permalink to Foo">Foo</a></h3>
+    <h3><a href="http://dragonsprint.com/my-super-post.html" rel="bookmark" title="Permalink to My super title">My super title</a></h3>
     <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
@@ -126,7 +126,7 @@
 </div>                </footer>
             </div>
 
-            <div class="image-pane main-content" style="background: url('theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
+            <div class="image-pane main-content" style="background: url('/theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
                         <h5 class='text-center'>About</h5>
