--- a/my-super-post.html
+++ b/my-super-post.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Ljubljana Pyramid Hackers" />
-        <title>Foo</title>
+        <title>My super title</title>
 
 <meta name="description" content="&lt;p class=&#34;first last&#34;&gt;Short version for index and feeds&lt;/p&gt;
 " />
@@ -56,7 +56,7 @@
                 <div id="contents">
 <div class="row">
     <div class="small-12 columns article">
-        <h2>Foo</h2>
+        <h2>My super title</h2>
         <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
@@ -118,7 +118,7 @@
 </div>                </footer>
             </div>
 
-            <div class="image-pane main-content" style="background: url('theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
+            <div class="image-pane main-content" style="background: url('/theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
                         <h5 class='text-center'>About</h5>
