--- a/archives.html
+++ b/archives.html
@@ -56,7 +56,7 @@
     <div class="small-12 columns">
         <h2>All Articles</h2>
           <section class="summary">
-    <h3><a href="http://dragonsprint.com/my-super-post.html" rel="bookmark" title="Permalink to Foo">Foo</a></h3>
+    <h3><a href="http://dragonsprint.com/my-super-post.html" rel="bookmark" title="Permalink to My super title">My super title</a></h3>
     <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
@@ -124,7 +124,7 @@
 </div>                </footer>
             </div>
 
-            <div class="image-pane main-content" style="background: url('theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
+            <div class="image-pane main-content" style="background: url('/theme/images/backdrop.jpg'); background-size:cover; background-position: right;">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
                         <h5 class='text-center'>About</h5>
