--- a/categories.html
+++ b/categories.html
@@ -39,7 +39,7 @@
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
-                            <li><a href="http://dragonsprint.com/category/yeah.html">yeah</a></li>
+                            <li><a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></li>
                         </ul>
                     </section>
                 </nav>
@@ -54,19 +54,18 @@
                 <div id="contents">
 <div class="row">
     <div class="small-12 columns article">
-        <h2><a href="http://dragonsprint.com/category/yeah.html">yeah</a></h2>
+        <h2><a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></h2>
               <section class="summary">
-    <h3><a href="http://dragonsprint.com/my-super-post.html" rel="bookmark" title="Permalink to My super title">My super title</a></h3>
+    <h3><a href="http://dragonsprint.com/domen-kozar.html" rel="bookmark" title="Permalink to Domen Kožar">Domen Kožar</a></h3>
     <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
-            <li><span><i class="fa fa-calendar"></i>&nbsp; Sun 03 October 2010</span></li>
-            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/yeah.html">yeah</a></span></li>
+            <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></span></li>
             <li>
                 <span>
                     <i class="fa fa-tags"></i>&nbsp;
-                    <a href="http://dragonsprint.com/tag/thats.html"><span class="label">thats</span></a>
-                    <a href="http://dragonsprint.com/tag/awesome.html"><span class="label">awesome</span></a>
+                    <a href="http://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters</span></a>
                 </span>
             </li>
         </ul>
@@ -74,9 +73,33 @@
 </div>
     <div class="row summary">
         <div class="small-12 medium-12 columns">
-            <p class="first last">Short version for index and feeds</p>
+            <p class="first last">Python / Nix / JavaScript developer</p>
 
-            <p class='text-right'><a href="http://dragonsprint.com/my-super-post.html">Continue reading&hellip;</a></p>
+            <p class='text-right'><a href="http://dragonsprint.com/domen-kozar.html">Continue reading&hellip;</a></p>
+        </div>
+    </div>
+</section>
+              <section class="summary">
+    <h3><a href="http://dragonsprint.com/nejc-zupan.html" rel="bookmark" title="Permalink to Nejc Zupan">Nejc Zupan</a></h3>
+    <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
+    <div class="small-12 columns">
+        <ul class="inline-list">
+            <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></span></li>
+            <li>
+                <span>
+                    <i class="fa fa-tags"></i>&nbsp;
+                    <a href="http://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters</span></a>
+                </span>
+            </li>
+        </ul>
+    </div>
+</div>
+    <div class="row summary">
+        <div class="small-12 medium-12 columns">
+            <p class="first last">Python consultant with an entrepreneurial blend</p>
+
+            <p class='text-right'><a href="http://dragonsprint.com/nejc-zupan.html">Continue reading&hellip;</a></p>
         </div>
     </div>
 </section>
@@ -128,7 +151,7 @@
                         <h5 class='text-center'>About</h5>
                         <div class="about-me">
                             <div class="small-12 columns text-justify">
-                                DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are Pyramid 2.0 and Pyramid for Newcomers. <br /><br />The sprint is <b>free</b> to attend for everyone! <a href="mailto:info@dragonsprint.com">Contact us</a> if you need help with covering your travel expenses.
+                                DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are <li>Pyramid 2.0</li> and Pyramid for Newcomers. <br /><br />The sprint is <b>free</b> to attend for everyone! <a href="mailto:info@dragonsprint.com">Contact us</a> if you need help with covering your travel expenses.
                             </div>
                             <div class="small-12 columns">
                                 <ul class="inline-center social-list">
