Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -39,7 +39,7 @@
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
-                            <li><a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></li>
+                            <li><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
                 </nav>
@@ -54,14 +54,14 @@
                 <div id="contents">
 <div class="row">
     <div class="small-12 columns article">
-        <h2><a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></h2>
+        <h2><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></h2>
               <section class="summary">
     <h3><a href="http://dragonsprint.com/domen-kozar.html" rel="bookmark" title="Permalink to Domen Kožar">Domen Kožar</a></h3>
-    <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
+    <!-- <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
             <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
-            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
                     <i class="fa fa-tags"></i>&nbsp;
@@ -70,22 +70,21 @@
             </li>
         </ul>
     </div>
-</div>
+</div> -->
     <div class="row summary">
         <div class="small-12 medium-12 columns">
-            <p class="first last">Python / Nix / JavaScript developer</p>
-
-            <p class='text-right'><a href="http://dragonsprint.com/domen-kozar.html">Continue reading&hellip;</a></p>
+            
+            <!-- <p class='text-right'><a href="http://dragonsprint.com/domen-kozar.html">Continue reading&hellip;</a> --></p>
         </div>
     </div>
 </section>
               <section class="summary">
     <h3><a href="http://dragonsprint.com/nejc-zupan.html" rel="bookmark" title="Permalink to Nejc Zupan">Nejc Zupan</a></h3>
-    <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
+    <!-- <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
             <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
-            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
                     <i class="fa fa-tags"></i>&nbsp;
@@ -94,12 +93,11 @@
             </li>
         </ul>
     </div>
-</div>
+</div> -->
     <div class="row summary">
         <div class="small-12 medium-12 columns">
-            <p class="first last">Python consultant with an entrepreneurial blend</p>
-
-            <p class='text-right'><a href="http://dragonsprint.com/nejc-zupan.html">Continue reading&hellip;</a></p>
+            
+            <!-- <p class='text-right'><a href="http://dragonsprint.com/nejc-zupan.html">Continue reading&hellip;</a> --></p>
         </div>
     </div>
 </section>
