--- a/tags.html
+++ b/tags.html
@@ -39,7 +39,7 @@
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
-                            <li><a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></li>
+                            <li><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
                 </nav>
