--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
-                            <li><a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></li>
+                            <li><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
                 </nav>
@@ -56,11 +56,11 @@
     <div class="small-12 medium-12 columns">
         <section class="summary">
     <h3><a href="http://dragonsprint.com/domen-kozar.html" rel="bookmark" title="Permalink to Domen Kožar">Domen Kožar</a></h3>
-    <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
+    <!-- <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
             <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
-            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
                     <i class="fa fa-tags"></i>&nbsp;
@@ -69,12 +69,11 @@
             </li>
         </ul>
     </div>
-</div>
+</div> -->
     <div class="row summary">
         <div class="small-12 medium-7 columns">
-            <p class="first last">Python / Nix / JavaScript developer</p>
-
-            <p class='text-right'><a href="http://dragonsprint.com/domen-kozar.html">Continue reading&hellip;</a></p>
+            
+            <!-- <p class='text-right'><a href="http://dragonsprint.com/domen-kozar.html">Continue reading&hellip;</a> --></p>
         </div>
         <div class="small-12 medium-5 columns">
             <a class="th" href="http://dragonsprint.com/domen-kozar.html">
@@ -87,11 +86,11 @@
     <div class="small-12 medium-6 columns small-articles">
         <section class="summary">
     <h3><a href="http://dragonsprint.com/nejc-zupan.html" rel="bookmark" title="Permalink to Nejc Zupan">Nejc Zupan</a></h3>
-    <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
+    <!-- <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
         <ul class="inline-list">
             <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
-            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
                     <i class="fa fa-tags"></i>&nbsp;
@@ -100,12 +99,11 @@
             </li>
         </ul>
     </div>
-</div>
+</div> -->
     <div class="row summary">
         <div class="small-12 medium-12 columns">
-            <p class="first last">Python consultant with an entrepreneurial blend</p>
-
-            <p class='text-right'><a href="http://dragonsprint.com/nejc-zupan.html">Continue reading&hellip;</a></p>
+            
+            <!-- <p class='text-right'><a href="http://dragonsprint.com/nejc-zupan.html">Continue reading&hellip;</a> --></p>
         </div>
     </div>
 </section>
