--- a/nejc-zupan.html
+++ b/nejc-zupan.html
@@ -41,7 +41,7 @@
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
-                            <li class="active"><a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></li>
+                            <li class="active"><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
                 </nav>
@@ -61,7 +61,7 @@
     <div class="small-12 columns">
         <ul class="inline-list">
             <li><span><i class="fa fa-calendar"></i>&nbsp; Thu 20 October 2016</span></li>
-            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">sprinters</a></span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
                     <i class="fa fa-tags"></i>&nbsp;
