--- a/nejc-zupan.html
+++ b/nejc-zupan.html
@@ -39,7 +39,7 @@
                     <section class="top-bar-section">
                         <ul class="left">
                         <li>
-                            <a href="#"><img src="/theme/images/logo.jpg" /></a>
+                            <a href="http://dragonsprint.com"><img src="/theme/images/logo.jpg" /></a>
                         </li>
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
