Generate Pelican site

--- a/pages/venue.html
+++ b/pages/venue.html
@@ -39,6 +39,7 @@
                         <li>
                             <a href="http://dragonsprint.com"><img src="/theme/images/logo.jpg" /></a>
                         </li>
+                            <li><a href="http://dragonsprint.com/pages/ljubljana.html">Ljubljana</a></li>
                             <li class="active"><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
