--- a/archives.html
+++ b/archives.html
@@ -45,6 +45,7 @@
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
+                            <li><a href="http://dragonsprint.com/category/misc.html">misc</a></li>
                             <li><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
@@ -62,6 +63,24 @@
     <div class="small-12 columns">
         <h2>All Articles</h2>
           <section class="summary">
+    <h3><a href="http://dragonsprint.com/welcome.html" rel="bookmark" title="Permalink to Hey there!">Hey there!</a></h3>
+    <!-- <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
+    <div class="small-12 columns">
+        <ul class="inline-list">
+            <li><span><i class="fa fa-calendar"></i>&nbsp; Mon 05 December 2016</span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/misc.html">misc</a></span></li>
+        </ul>
+    </div>
+</div> -->
+    <div class="row summary">
+        <div class="small-12 medium-12 columns">
+            <p>Welcome to DragonSprint a weeklong sprint on Pyramid, taking place in Ljubljana, Slovenia this December. Use the menu at the top to read more about the event!</p>
+
+            <!-- <p class='text-right'><a href="http://dragonsprint.com/welcome.html">Continue reading&hellip;</a> --></p>
+        </div>
+    </div>
+</section>
+  <section class="summary">
     <h3><a href="http://dragonsprint.com/domen-kozar.html" rel="bookmark" title="Permalink to Domen Kožar">Domen Kožar</a></h3>
     <!-- <div class="row info-bar" style="margin-left:0rem;margin-bottom:6px;">
     <div class="small-12 columns">
