--- a/pages/venue.html
+++ b/pages/venue.html
@@ -45,6 +45,7 @@
                             <li class="active"><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
+                            <li><a href="http://dragonsprint.com/category/misc.html">misc</a></li>
                             <li><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
