Generate Pelican site

--- a/pages/topics.html
+++ b/pages/topics.html
@@ -41,6 +41,7 @@
                         </li>
                             <li><a href="http://dragonsprint.com/pages/ljubljana.html">Ljubljana</a></li>
                             <li><a href="http://dragonsprint.com/pages/schedule.html">Schedule</a></li>
+                            <li><a href="http://dragonsprint.com/pages/sponsors.html">Support Us!</a></li>
                             <li class="active"><a href="http://dragonsprint.com/pages/topics.html">Sprint Topics</a></li>
                             <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
