--- a/index.html
+++ b/index.html
@@ -179,12 +179,7 @@
                     <div class="small-12 medium-4 large-12 columns">
                         <h5 class='text-center'>About</h5>
                         <div class="about-me">
-                            <div class="hide-for-medium-only small-3 columns no-buffer">
-                                <a class="th" href="/theme/images/profile.png">
-                                    <img src="/theme/images/profile.png">
-                                </a>
-                            </div>
-                            <div class="small-9 medium-12 large-9 columns text-justify">
+                            <div class="small-12 columns text-justify">
                                 DragonSprint is a week-long sprint on Pyramid. The sprint takes place in Ljubljana, Slovenia, EU in the first week of December (5th to 9th). The main two sprint topics are <i>Pyramid 2.0</i> and Pyramid for Newcomers. <br /><br />The sprint is <b>free</b> to attend for everyone! <a href="mailto:info@dragonsprint.com">Contact us</a> if you need help with covering your travel expenses.
                             </div>
                             <div class="small-12 columns">
