Generate Pelican site

--- a/pages/topics.html
+++ b/pages/topics.html
@@ -76,21 +76,25 @@
 </div>
 <div class="section" id="interesting-let-s-open-an-issue-and-talk-about-it">
 <h3>Interesting, let's open an issue and talk about it</h3>
-<p>Something to do with route prefixes so that it's possible to use config.include without the base url inside having a / suffix. #406, #1639
-Drop PasteDeploy in favor of a better loading system. #2419
-Fix predicate factories to accept a standardized info object instead of config. Currently the only purpose of this argument is for config.maybe_dotted but it's poor practice to pass the ephemeral config object around. #2535</p>
+<ul class="simple">
+<li>Something to do with route prefixes so that it's possible to use config.include without the base url inside having a / suffix. #406, #1639</li>
+<li>Drop PasteDeploy in favor of a better loading system. #2419</li>
+<li>Fix predicate factories to accept a standardized info object instead of config. Currently the only purpose of this argument is for config.maybe_dotted but it's poor practice to pass the ephemeral config object around. #2535</li>
+</ul>
 </div>
 <div class="section" id="interesting-but-unlikely-without-a-champion-to-start-the-discussion">
 <h3>Interesting but unlikely without a champion to start the discussion</h3>
-<p>Deprecate remember/forget APIs in favor of a pattern that fits better with non-cookie workflows.
-Something to do with identity and auth-api post mortem?
-Remove pcreate and default scaffolds. #2384
-Add a public API at the top-level pyramid namespace. For example pyramid.view_config, pyramid.Configurator, etc. This would greatly assist in maintainability of the public API for people using IDEs like pycharm where they may not be checking the docs to ensure an API is public. Probably use a lazy-instantiator like apipkg for this. #2387
-Switch the ISession contract from pickleable objects to something more secure and portable like json. #2709
-Separate CSRF tokens from the ISession into something else implementable without a session.
-Re-work view_config to namespace arguments to be more clear about options versus predicates.
-Re-work config.add_view, config.add_forbidden_view, config.add_notfound_view to accept only kwargs. Almost all of the parameters are indistinguishable from user-defined view options, so they could be treated all the same.
-Separate NotFound and Forbidden exceptions from HTTPNotFound and HTTPForbidden. This would undo previous work to merge them in order to make exception views more understandable.</p>
+<ul class="simple">
+<li>Deprecate remember/forget APIs in favor of a pattern that fits better with non-cookie workflows.</li>
+<li>Something to do with identity and auth-api post mortem?</li>
+<li>Remove pcreate and default scaffolds. #2384</li>
+<li>Add a public API at the top-level pyramid namespace. For example pyramid.view_config, pyramid.Configurator, etc. This would greatly assist in maintainability of the public API for people using IDEs like pycharm where they may not be checking the docs to ensure an API is public. Probably use a lazy-instantiator like apipkg for this. #2387</li>
+<li>Switch the ISession contract from pickleable objects to something more secure and portable like json. #2709</li>
+<li>Separate CSRF tokens from the ISession into something else implementable without a session.</li>
+<li>Re-work view_config to namespace arguments to be more clear about options versus predicates.</li>
+<li>Re-work config.add_view, config.add_forbidden_view, config.add_notfound_view to accept only kwargs. Almost all of the parameters are indistinguishable from user-defined view options, so they could be treated all the same.</li>
+<li>Separate NotFound and Forbidden exceptions from HTTPNotFound and HTTPForbidden. This would undo previous work to merge them in order to make exception views more understandable.</li>
+</ul>
 <p>DragonSprint is a perfect opportunity to discuss these issues and decide what the next steps are.</p>
 </div>
 </div>
