--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@ Tags: Django, Javascript, Front-end</p>
                         </ul>
                     </div>
 
+                    <div class="small-12 medium-4  large-12 columns link-list" style="text-align: center">
+                        <br /><br />
+                        <a href="https://www.surveymonkey.com/r/DQ5C8T2" class="large button">Join Us!</a>
+                    </div>
+
+
 <!--
                     <div class="small-12 medium-3 large-12 columns">
                     </div>
