--- a/livia-dobai.html
+++ b/livia-dobai.html
@@ -16,9 +16,9 @@
             #main-content {display:table;height:100%}
         </style>
         <![endif]-->
-        <link rel="stylesheet" href="http://dragonsprint.com/theme/css/backdrop.css" />
-        <link rel="stylesheet" href="http://dragonsprint.com/theme/css/pygments.css" />
-        <script src="http://dragonsprint.com/theme/js/modernizr.js"></script>
+        <link rel="stylesheet" href="/theme/css/backdrop.css" />
+        <link rel="stylesheet" href="/theme/css/pygments.css" />
+        <script src="/theme/js/modernizr.js"></script>
 
         <link href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Full Atom Feed" />
         <link href="http://dragonsprint.com/feeds/sprinters.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Categories Atom Feed" />
@@ -213,9 +213,9 @@ Tags: Django, Javascript, Front-end</p>
         </div>
 
 
-        <script src="http://dragonsprint.com/theme/js/jquery.min.js"></script>
-        <script src="http://dragonsprint.com/theme/js/foundation.min.js"></script>
-        <script src="http://dragonsprint.com/theme/js/app.js"></script>
+        <script src="/theme/js/jquery.min.js"></script>
+        <script src="/theme/js/foundation.min.js"></script>
+        <script src="/theme/js/app.js"></script>
     </body>
 
 </html>
