Generate Pelican site

--- a/chris-mcdonough.html
+++ b/chris-mcdonough.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Ljubljana Pyramid Hackers" />
         <title>Chris McDonough [remotely]</title>
 
-<meta name="description" content="&lt;p class=&#34;first last&#34;&gt;Python / Nix / JavaScript developer&lt;/p&gt;
+<meta name="description" content="&lt;p class=&#34;first last&#34;&gt;Pyramid author&lt;/p&gt;
 " />
 <meta name="keywords" content=" sprinters  "/>
 
@@ -156,6 +156,7 @@
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
+                            <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                     </div>
 
