--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@ Likes OSS, crypto and fiddling with hardware.</p>
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
+                            <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                     </div>
 
