--- a/tags.html
+++ b/tags.html
@@ -64,7 +64,7 @@
         <h2>Tags</h2>
         <section>
             <p class='tag-page'>
-                <a href="http://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters&nbsp;&nbsp;<span class="label round secondary">9</span></span></a>
+                <a href="http://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters&nbsp;&nbsp;<span class="label round secondary">10</span></span></a>
             </p>    
         </section>
     </div>
@@ -136,6 +136,7 @@
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
+                            <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                     </div>
 
