--- a/livia-dobai.html
+++ b/livia-dobai.html
@@ -155,6 +155,7 @@ Tags: Django, Javascript, Front-end</p>
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
+                            <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                     </div>
 
