Generate Pelican site

--- a/tom-lazar.html
+++ b/tom-lazar.html
@@ -20,8 +20,8 @@
         <link rel="stylesheet" href="/theme/css/pygments.css" />
         <script src="/theme/js/modernizr.js"></script>
 
-        <link href="http://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Full Atom Feed" />
-        <link href="http://dragonsprint.com/feeds/sprinters.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Categories Atom Feed" />
+        <link href="https://dragonsprint.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Full Atom Feed" />
+        <link href="https://dragonsprint.com/feeds/sprinters.atom.xml" type="application/atom+xml" rel="alternate" title="A full week of sprinting on Pyramid Categories Atom Feed" />
 
     </head>
 
@@ -40,21 +40,21 @@
                         <li>
                             <a href="http://dragonsprint.com"><img src="/theme/images/logo.png" /></a>
                         </li>
-                            <li><a href="http://dragonsprint.com/pages/ljubljana.html">Ljubljana</a></li>
-                            <li><a href="http://dragonsprint.com/pages/schedule.html">Schedule</a></li>
-                            <li><a href="http://dragonsprint.com/pages/sponsors.html">Support Us!</a></li>
-                            <li><a href="http://dragonsprint.com/pages/topics.html">Sprint Topics</a></li>
-                            <li><a href="http://dragonsprint.com/pages/venue.html">Venue</a></li>
+                            <li><a href="https://dragonsprint.com/pages/ljubljana.html">Ljubljana</a></li>
+                            <li><a href="https://dragonsprint.com/pages/schedule.html">Schedule</a></li>
+                            <li><a href="https://dragonsprint.com/pages/sponsors.html">Support Us!</a></li>
+                            <li><a href="https://dragonsprint.com/pages/topics.html">Sprint Topics</a></li>
+                            <li><a href="https://dragonsprint.com/pages/venue.html">Venue</a></li>
                         </ul>
                         <ul class="right">
-                            <li class="active"><a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
+                            <li class="active"><a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></li>
                         </ul>
                     </section>
                 </nav>
 
                 <div class="row title-bar">
                     <div class="small-12 columns">
-                        <h1><a href="http://dragonsprint.com">A full week of sprinting on Pyramid</a></h1><h2> <small>5 to 9 December 2016, set in the beautiful Ljubljana, Slovenia</small></h2>
+                        <h1><a href="https://dragonsprint.com">A full week of sprinting on Pyramid</a></h1><h2> <small>5 to 9 December 2016, set in the beautiful Ljubljana, Slovenia</small></h2>
                         <hr>
                     </div>
                 </div>
@@ -67,11 +67,11 @@
     <div class="small-12 columns">
         <ul class="inline-list">
             <li><span><i class="fa fa-calendar"></i>&nbsp; Sun 30 October 2016</span></li>
-            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="http://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
+            <li><span><i class="fa fa-folder-open"></i>&nbsp; <a href="https://dragonsprint.com/category/sprinters.html">Sprinters</a></span></li>
             <li>
                 <span>
                     <i class="fa fa-tags"></i>&nbsp;
-                    <a href="http://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters</span></a>
+                    <a href="https://dragonsprint.com/tag/sprinters.html"><span class="label">sprinters</span></a>
                 </span>
             </li>
         </ul>
@@ -94,19 +94,19 @@
 <div class="row">
 <!--     <div class="small-6 medium-3 columns">
         <ul class="left-nav">
-            <li><a href="http://dragonsprint.com">Home &nbsp;<i class="fa fa-home fa-fw"></i></a></li>
-            <li><a href="http://dragonsprint.com/categories.html">Categories &nbsp;<i class="fa fa-folder-open fa-fw"></i></a></li>
+            <li><a href="https://dragonsprint.com">Home &nbsp;<i class="fa fa-home fa-fw"></i></a></li>
+            <li><a href="https://dragonsprint.com/categories.html">Categories &nbsp;<i class="fa fa-folder-open fa-fw"></i></a></li>
         </ul>
     </div>
     <div class="small-6 medium-3 medium-push-6 columns">
         <ul class="right-nav">
-            <li><a href="http://dragonsprint.com/feeds/all.atom.xml"><i class="fa fa-rss fa-fw"></i>&nbsp; Feed</a></li>
-            <li><a href="http://dragonsprint.com/archives.html"><i class="fa fa-archive fa-fw"></i>&nbsp; Archives</a></li>
+            <li><a href="https://dragonsprint.com/feeds/all.atom.xml"><i class="fa fa-rss fa-fw"></i>&nbsp; Feed</a></li>
+            <li><a href="https://dragonsprint.com/archives.html"><i class="fa fa-archive fa-fw"></i>&nbsp; Archives</a></li>
         </ul>
     </div> -->
 <!--     <div class="small-12 medium-6 medium-pull-3 columns text-center">
         <p class="tag-cloud">
-            <a href="http://dragonsprint.com/tags.html"><i class="fa fa-tags"></i>&nbsp;Tags:</a>&nbsp;&nbsp;
+            <a href="https://dragonsprint.com/tags.html"><i class="fa fa-tags"></i>&nbsp;Tags:</a>&nbsp;&nbsp;
             &nbsp;&hellip;
         </p>
     </div> -->
@@ -179,19 +179,19 @@
 <div class="row">
 <!--     <div class="small-6 medium-3 columns">
         <ul class="left-nav">
-            <li><a href="http://dragonsprint.com">Home &nbsp;<i class="fa fa-home fa-fw"></i></a></li>
-            <li><a href="http://dragonsprint.com/categories.html">Categories &nbsp;<i class="fa fa-folder-open fa-fw"></i></a></li>
+            <li><a href="https://dragonsprint.com">Home &nbsp;<i class="fa fa-home fa-fw"></i></a></li>
+            <li><a href="https://dragonsprint.com/categories.html">Categories &nbsp;<i class="fa fa-folder-open fa-fw"></i></a></li>
         </ul>
     </div>
     <div class="small-6 medium-3 medium-push-6 columns">
         <ul class="right-nav">
-            <li><a href="http://dragonsprint.com/feeds/all.atom.xml"><i class="fa fa-rss fa-fw"></i>&nbsp; Feed</a></li>
-            <li><a href="http://dragonsprint.com/archives.html"><i class="fa fa-archive fa-fw"></i>&nbsp; Archives</a></li>
+            <li><a href="https://dragonsprint.com/feeds/all.atom.xml"><i class="fa fa-rss fa-fw"></i>&nbsp; Feed</a></li>
+            <li><a href="https://dragonsprint.com/archives.html"><i class="fa fa-archive fa-fw"></i>&nbsp; Archives</a></li>
         </ul>
     </div> -->
 <!--     <div class="small-12 medium-6 medium-pull-3 columns text-center">
         <p class="tag-cloud">
-            <a href="http://dragonsprint.com/tags.html"><i class="fa fa-tags"></i>&nbsp;Tags:</a>&nbsp;&nbsp;
+            <a href="https://dragonsprint.com/tags.html"><i class="fa fa-tags"></i>&nbsp;Tags:</a>&nbsp;&nbsp;
             &nbsp;&hellip;
         </p>
     </div> -->
