Generate Pelican site

--- a/livia-dobai.html
+++ b/livia-dobai.html
@@ -156,7 +156,9 @@ Tags: Django, Javascript, Front-end</p>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
+                            <li><img src="/theme/images/jetbrains.png" /></li>
                         </ul>
+
                     </div>
 
                     <div class="small-12 medium-4  large-12 columns link-list" style="text-align: center">
