Generate Pelican site

--- a/pages/topics.html
+++ b/pages/topics.html
@@ -190,8 +190,8 @@
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
-                            <li><img src="/theme/images/jetbrains.png" /></li>
                         </ul>
+                        <img style="margin: 0 auto;" src="/theme/images/jetbrains.png" />
 
                     </div>
 
