--- a/authors.html
+++ b/authors.html
@@ -223,8 +223,8 @@ Tags: Pyramid, C, WebAssembly, LLVM, Databases</p>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
-                            <li><img src="/theme/images/jetbrains.png" /></li>
                         </ul>
+                        <img style="margin: 0 auto;" src="/theme/images/jetbrains.png" />
 
                     </div>
 
