--- a/matthew-wilkes.html
+++ b/matthew-wilkes.html
@@ -157,7 +157,7 @@
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
-                        <img style="margin: 0 auto;" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
 
                     </div>
 
