--- a/categories.html
+++ b/categories.html
@@ -224,7 +224,7 @@ Tags: Pyramid, C, WebAssembly, LLVM, Databases</p>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
-                        <img style="margin: 0 auto;" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
 
                     </div>
 
