--- a/steve-piercy.html
+++ b/steve-piercy.html
@@ -161,7 +161,7 @@ he will be available remotely to assist.</p>
                             <li><a href="https://plone.org/foundation">Plone Foundation</a></li>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
-                        <img style="margin: 0 auto;" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
 
                     </div>
 
