Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@ he will be available remotely to assist.</p>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                         <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/psf.png" />
 
                     </div>
 
