--- a/malthe-borch.html
+++ b/malthe-borch.html
@@ -158,6 +158,7 @@ Tags: Pyramid, C, WebAssembly, LLVM, Databases</p>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                         <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/psf.png" />
 
                     </div>
 
