--- a/pages/venue.html
+++ b/pages/venue.html
@@ -154,6 +154,7 @@
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                         <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/psf.png" />
 
                     </div>
 
