--- a/jan-likar.html
+++ b/jan-likar.html
@@ -158,6 +158,7 @@ Likes OSS, crypto and fiddling with hardware.</p>
                             <li><a href="http://dragonsprint.com/pages/sponsors.html">Diana Clarke</a></li>
                         </ul>
                         <img style="margin: 0 auto; display: block" src="/theme/images/jetbrains.png" />
+                        <img style="margin: 0 auto; display: block" src="/theme/images/psf.png" />
 
                     </div>
 
