--- a/pages/topics.html
+++ b/pages/topics.html
@@ -184,6 +184,7 @@
                     <div class="small-12 medium-4  large-12 columns link-list">
                         <h5 class='text-center'>Sponsors &amp; Partners</h5>
                         <ul class="inline-center">
+                            <li><a href="http://www.stevepiercy.com/">Steve Piercy</a></li>
                             <li><a href="http://www.termitnjak.com/">Termitnjak d.o.o.</a></li>
                             <li><a href="https://www.domenkozar.com/">Domen Kožar</a></li>
                             <li><a href="http://www.niteoweb.com">NiteoWeb Ltd.</a></li>
